fixed input jump4

--- a/src/components/UI/FormInput/FormInput.module.css
+++ b/src/components/UI/FormInput/FormInput.module.css
@@ -1,7 +1,8 @@
 .FormInput {
     width: 100%;
-    padding: 10px;
+    padding: 5px;
     box-sizing: border-box;
+    display: block;
 }
 
 .Label {
